# cw-workshop

./: Cargo.toml  README.md
donation-manager/: Cargo.toml  README.md
donation-manager/src/: contract.rs  lib.rs  msg.rs  state.rs
donation-peer/: Cargo.toml
donation-peer/src/: contract.rs  lib.rs  msg.rs  state.rs
