[package]
name = "donation-manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.14.0"
cw-utils = "0.14.0"
cw-multi-test = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
donation-peer = { version = "0.1.0", features = ["library"], path = "../donation-peer/" }

