[package]
name = "donation-peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.13.4"
cw-utils = "0.13.4"
serde = { version = "1", features = ["derive"] }
