[package]
name = "donation-peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.14.0"
serde = { version = "1", features = ["derive"] }
cw-multi-test = "0.14.0"

